fix: adjust activity alignment

--- a/src/assets/styles/pages/_activities.scss
+++ b/src/assets/styles/pages/_activities.scss
@@ -61,8 +61,7 @@
     padding: 0;
 
     .prose {
-        padding-block: var(--space-xl);
-        padding-inline: var(--space-md);
+        padding: var(--space-xl);
     }
 }
 
